apply plugin: 'java'

group = 'uk.co.empyrean'
version = '0.0.1-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_13
targetCompatibility = JavaVersion.VERSION_13

subprojects {
    apply plugin: 'idea'
//    apply plugin: 'org.springframework.boot'

    apply from: "$rootDir/dependencies.gradle"

//    springBoot {
//        mainClassName = 'uk.co.empyrean.trading.driver.TradingApplication'
//    }
//
    configurations {
        compile.exclude module: "spring-boot-starter-tomcat"
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}